--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "codelf",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "keywords": ["MCP", "codelf", "AI IDE", "cursor", "claude", "ai assistant", "ai agent", "ai editor"],
+  "bin": "./build/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Disdjj/codelf"
